# fastapigemini-pet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto.yml  deploy.yml  docker.yml  lint.yml  migrations.yml  security.yml
alembic/: env.py
alembic/versions/: 001_create_users_and_gemini_requests.py
app/: main.py
app/api/: admin.py  auth.py  gemini.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  gemini.py  user.py
app/repositories/: gemini.py  user.py
app/schemas/: auth.py  gemini.py  user.py
app/services/: auth.py  gemini_client.py
scripts/: create_admin.py
tests/: conftest.py  test_admin_endpoints.py  test_auth_endpoints.py  test_gemini.py  test_gemini_endpoints.py
